<?xml version="1.0"?>
<package format="2">
  <name>mqtt_ros_aws_iot</name>
  <version>0.0.1</version>
  <description>The mqtt_ros_aws_iot bridge package</description>

  <author email="junya.hayashi@groove-x.com">Junya Hayashi</author>
  <maintainer email="dftossem@gmail.com">David Tosse</maintainer>

  <license>MIT</license>

  <url>https://github.com/dftossem/mqtt_ros_aws_iot/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>rospy-message-converter</build_depend>

  <export>
  </export>

</package>
